--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
-
+	
+	<div class="container">
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+			 <a class="brand" href="#">Treebook</a>
+			 <ul class="nav">
+			 	<li><%= link_to "All Statuses", statuses_path %></li>
+			</div>
+		</div>	
+		<%= yield %>
+	</div>	
 </body>
 </html>
