--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 	
-	<div class="container">
+	
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 			 <a class="brand" href="#">Treebook</a>
@@ -17,7 +17,12 @@
 			 	<li><%= link_to "All Statuses", statuses_path %></li>
 			</div>
 		</div>	
+
+<div class="container">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  
 		<%= yield %>
-	</div>	
+</div>	
 </body>
 </html>
