--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Treehouse</title>
+  <title>Invest.or</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -12,9 +12,22 @@
 	
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
-			 <a class="brand" href="#">Treebook</a>
-			 <ul class="nav">
-			 	<li><%= link_to "All Statuses", statuses_path %></li>
+				<div class="container">
+					 <a href="#" class="brand" >Invest.or</a>
+					 <ul class="nav">
+					 	<li><%= link_to "All Statuses", statuses_path %></li>
+					 </ul>
+					 
+					 <ul class="nav pull-right">	
+					 	<% if user_signed_in? %>
+						 	<li> <%= link_to current_user.full_name, edit_user_registration_path %> </li>
+						 	<li> <%= link_to "Sign out", destroy_user_session_path, method: :delete %> </li>
+						<% else %> 	
+						    <li> <%= link_to "Register", new_user_registration_path %> </li>
+						 	<li> <%= link_to "Sign in", new_user_session_path %> </li>
+						<% end %> 	
+					 </ul>		
+				</div>	 
 			</div>
 		</div>	
 
