--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 				<div class="container">
 					 <a href="#" class="brand" >Invest.or</a>
 					 <ul class="nav">
-					 	<li><%= link_to "All Statuses", feed_path %></li>
+					 	<li><%= link_to "Feed", feed_path %></li>
 					 </ul>
 					 
 					 <ul class="nav pull-right">	
