--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 					 
 					 <ul class="nav pull-right">	
 					 	<% if user_signed_in? %>
+					 		<li><%= link_to 'Friends', user_friendships_path %></li>
 						 	<li> <%= link_to current_user.full_name, edit_user_registration_path %> </li>
 						 	<li> <%= link_to "Sign out", logout_path %> </li>
 						<% else %> 	
